--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/ems
-spring.datasource.username=root
-spring.datasource.password=Shashank12@
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.show_sql=true
-server.port=8083
+#spring.datasource.url=jdbc:mysql://localhost:3306/ems
+#spring.datasource.username=root
+#spring.datasource.password=Shashank12@
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.show_sql=true
+#server.port=8080
+spring.profiles.active=${ENV:dev}
